--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,6 +1,6 @@
 .match-card-container {
   background-color: #0f172a;
-  width: 200px;
+  width:120px;
   margin: 10px;
   display: flex;
   flex-direction: column;
@@ -9,6 +9,7 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   border-radius: 10px;
+  text-align:center;
 }
 .competing-team-logo {
   width: 60px;
@@ -33,9 +34,14 @@
   color: #e31a1a;
   font-weight: bold;
 }
+@media(min-width:567px){
+  .match-card-container{
+     width:200px;
+  }
+}
 @media (min-width: 768px) {
   .match-card-container {
-    width: 180px;
+    width:230px;
     height: 400px;
   }
   .competing-team-logo {
@@ -57,7 +63,7 @@
 }
 @media (min-width: 992px) {
   .match-card-container {
-    width: 240px;
+    width: 280px;
   }
 }
 @media (min-width: 1140px) {
