--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -44,6 +44,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 10px;
+  justify-content:space-between;
 }
 @media (min-width: 768px) {
   .team-banner {
